<resources>
    <string name="app_name">Viber</string>
    <string name="viber">Viber</string>
    <string name="your_email">Your Email:</string>
    <string name="your_password">Your password:</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="age">Age</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password_title">Forgot password?</string>
    <string name="your_email_reset">Your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="logout">Logout</string>
    <string name="toast">Please fill in all fields</string>
    <string name="reset_link_sent">The reset link has been successfully sent</string>
    <string name="type_your_message">Type your message:</string>
    <string name="empty_message">You cannot send an empty message</string>
</resources>