<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RegistrationActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textSize="48sp"
            android:textColor="@color/purple_500"
            android:layout_margin="8dp"/>

        <EditText
            android:id="@+id/editTextRegEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_margin="8dp"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/editTextRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_margin="8dp"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/editTextRegName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_margin="8dp"
            android:hint="@string/name"/>

        <EditText
            android:id="@+id/editTextRegLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:layout_margin="8dp"
            android:hint="@string/last_name"/>

        <EditText
            android:id="@+id/editTextRegAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_margin="8dp"
            android:hint="@string/age"/>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/sign_up"/>


    </LinearLayout>

</ScrollView>