<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_title"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="32sp"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/editTextForgotEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_email_reset"
        android:layout_margin="16dp"
        android:inputType="textEmailAddress"/>

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/reset_password"/>

</LinearLayout>